Fix subitem numbering in table of contents

--- a/meetings/agenda.css
+++ b/meetings/agenda.css
@@ -15,10 +15,12 @@ table {
 /* https://stackoverflow.com/a/30326819/13176711 */
 ol {
     counter-reset: item;
+    margin-top: 1em;
 }
 
 ol > li {
     counter-increment: item;
+    margin-top: 1em;
 }
 
 ol ol > li {
