--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ code {
   --nav-size: 80px;
   --border: 1px solid #474a4d;
   --border-radius: 8px;
-  --speed: 500ms;
+  --speed: 1000ms;
 }
 
 ul {
@@ -56,13 +56,37 @@ a {
 }
 
 .dropdown {
-  position: absolute;
-  top: 80px;
-  width: inherit;
+  position: relative;
+  height: auto;
+  width: 800px;
   background-color: #192543;
   border: var(--border);
   border-radius: var(--border-radius);
   padding: 1rem;
+  overflow: hidden;
+}
+
+.dropdown-enter {
+  position: relative;
+  max-height: 0px;
+  overflow: hidden;
+}
+
+.dropdown-enter-active {
+  max-height: 500px;
+  transition: all var(--speed) ease;
+  overflow: hidden;
+}
+
+.dropdown-exit {
+  max-height: 500px;
+  position: relative;
+  overflow: hidden;
+}
+
+.dropdown-exit-active {
+  max-height: 0px;
+  transition: all var(--speed) ease;
   overflow: hidden;
 }
 
@@ -120,11 +144,19 @@ th {
 
 tr:nth-child(1) { background-color: #e5e8ed; }
 
-tr:hover { background-color: #e5e8ed !important; }
+tr:hover { background-color: #e5e8ed; }
 
 tr.tm-tr-header {
   background-color: #c4cdd6;
   height: 50px;
+}
+
+tr.trh {
+  grid-template-rows: auto 1fr auto;
+}
+
+tr.trh:hover {
+  background-color: white;
 }
 
 .meeting-table {
@@ -137,15 +169,16 @@ tr.tm-tr-header {
 }
 
 .meeting-details {
+  position: relative;
   justify-content: center;
-  max-width: 60%;
-  min-width: 280px;
   align-items: center;
-  float: none;
+  height: inherit;
   margin: 0 auto;
   margin-top: 2rem;
   padding-left: 0.3rem;
   border: solid #DCDCDC 1px;
+
+  overflow: hidden;
 }
 
 .agenda-minutes-header-left {
@@ -167,6 +200,14 @@ tr.tm-tr-header {
   align-items: center;
   justify-content: center;
   padding-top: 0.6rem;
+}
+
+.sub-nav-blank {
+  color: grey;
+  font-weight: bolder;
+  justify-content: right;
+  padding: 0.5rem;
+  border: 1px solid #DCDCDC;
 }
 
 .sub-nav-text {
