--- a/src/index.css
+++ b/src/index.css
@@ -91,8 +91,8 @@ a {
 }
 
 .menu-item {
-  height: 50px;
   display: flex;
+  font-size: 25px;
   align-items: center;
   border-radius: var(--border-radius);
   transition: background var(--speed);
